--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -13,7 +13,7 @@ spec:
     path: k8s
   destination:
     server: https://kubernetes.default.svc
-    namespace: default
+    namespace: sharing-sbom-system
   syncPolicy:
     automated:
       prune: true
