--- a/k8s/github-runner/runner-rbac.yaml
+++ b/k8s/github-runner/runner-rbac.yaml
@@ -36,4 +36,37 @@ roleRef:
   kind: Role
   name: blockchain-access
   apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: sharing-sbom-system-access
+  namespace: sharing-sbom-system
+rules:
+- apiGroups: ["apps"]
+  resources: ["deployments"]
+  verbs: ["get", "list", "watch"]
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["get", "list"]
+- apiGroups: [""]
+  resources: ["pods/log"]
+  verbs: ["get"]
+- apiGroups: [""]
+  resources: ["services"]
+  verbs: ["get", "list"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: github-runner-sharing-sbom-system-access
+  namespace: sharing-sbom-system
+subjects:
+- kind: ServiceAccount
+  name: github-runner
+  namespace: github-runner
+roleRef:
+  kind: Role
+  name: sharing-sbom-system-access
+  apiGroup: rbac.authorization.k8s.io
 
