--- a/k8s/sharing-sbom-system/proving-service-deployment.yaml
+++ b/k8s/sharing-sbom-system/proving-service-deployment.yaml
@@ -15,8 +15,8 @@ spec:
     spec:
       containers:
       - name: proving-service
-        image: proving-service:latest
-        imagePullPolicy: Never
+        image: acbdockeracc/proving-service:latest
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
           name: http
