--- a/.github/workflows/deploy-microservices.yaml
+++ b/.github/workflows/deploy-microservices.yaml
@@ -94,8 +94,18 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add k8s/sharing-sbom-system/*.yaml
-          git diff --staged --quiet || git commit -m "Update microservice images to ${{ steps.tag.outputs.tag }}"
-          git push
+          
+          # Check if there are changes to commit
+          if ! git diff --staged --quiet; then
+            git commit -m "Update microservice images to ${{ steps.tag.outputs.tag }}"
+            
+            # Pull latest changes with rebase and push (retry up to 3 times)
+            for i in {1..3}; do
+              git pull --rebase origin main && git push && break || sleep 5
+            done
+          else
+            echo "No changes to commit"
+          fi
 
       - name: Wait for ArgoCD sync
         run: |
