switching from dockerhub to ghcr and build images parallel

--- a/.github/workflows/deploy-microservices.yaml
+++ b/.github/workflows/deploy-microservices.yaml
@@ -14,80 +14,67 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-update-microservices:
+  build-services:
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+    strategy:
+      matrix:
+        service: [proving-service, verifier-service, ipfs-service]
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set image metadata
+        id: meta
+        run: |
+          IMAGE_TAG="${GITHUB_SHA:0:7}"
+          REPO_PATH=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          echo "tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
+          echo "repo_path=$REPO_PATH" >> $GITHUB_OUTPUT
+          echo "Building ${{ matrix.service }} with tag: $IMAGE_TAG"
+
+      - name: Build and push ${{ matrix.service }}
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./${{ matrix.service }}/Dockerfile
+          push: true
+          platforms: linux/amd64
+          tags: ghcr.io/${{ steps.meta.outputs.repo_path }}/${{ matrix.service }}:${{ steps.meta.outputs.tag }}
+          cache-from: type=gha,scope=${{ matrix.service }}
+          cache-to: type=gha,mode=max,scope=${{ matrix.service }}
+
+  update-manifests:
+    needs: build-services
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    outputs:
-      image_tag: ${{ steps.tag.outputs.tag }}
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Set image tag
-        id: tag
-        run: |
-          IMAGE_TAG="${GITHUB_SHA:0:7}"
-          echo "tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
-          echo "Image tag: $IMAGE_TAG"
-
-      - name: Build and push proving-service
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./proving-service/Dockerfile
-          push: true
-          platforms: linux/amd64
-          tags: ${{ secrets.DOCKER_USERNAME }}/proving-service:${{ steps.tag.outputs.tag }},${{ secrets.DOCKER_USERNAME }}/proving-service:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Build and push verifier-service
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./verifier-service/Dockerfile
-          push: true
-          platforms: linux/amd64
-          tags: ${{ secrets.DOCKER_USERNAME }}/verifier-service:${{ steps.tag.outputs.tag }},${{ secrets.DOCKER_USERNAME }}/verifier-service:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Build and push ipfs-service
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./ipfs-service/Dockerfile
-          push: true
-          platforms: linux/amd64
-          tags: ${{ secrets.DOCKER_USERNAME }}/ipfs-service:${{ steps.tag.outputs.tag }},${{ secrets.DOCKER_USERNAME }}/ipfs-service:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
       - name: Update Kubernetes manifests
         run: |
-          DOCKER_USERNAME="${{ secrets.DOCKER_USERNAME }}"
-          IMAGE_TAG="${{ steps.tag.outputs.tag }}"
+          REPO_PATH=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          IMAGE_TAG="${GITHUB_SHA:0:7}"
           
-          # Update proving-service image tag (match any existing tag)
-          sed -i "s|image: ${DOCKER_USERNAME}/proving-service:.*|image: ${DOCKER_USERNAME}/proving-service:${IMAGE_TAG}|g" k8s/sharing-sbom-system/proving-service-deployment.yaml
-          
-          # Update verifier-service image tag (match any existing tag)
-          sed -i "s|image: ${DOCKER_USERNAME}/verifier-service:.*|image: ${DOCKER_USERNAME}/verifier-service:${IMAGE_TAG}|g" k8s/sharing-sbom-system/verifier-service-deployment.yaml
-          
-          # Update ipfs-service image tag (match any existing tag)
-          sed -i "s|image: ${DOCKER_USERNAME}/ipfs-service:.*|image: ${DOCKER_USERNAME}/ipfs-service:${IMAGE_TAG}|g" k8s/sharing-sbom-system/ipfs-service-deployment.yaml
+          # Update all service images with commit hash tag
+          sed -i "s|image: ghcr.io/.*/proving-service:.*|image: ghcr.io/${REPO_PATH}/proving-service:${IMAGE_TAG}|g" k8s/sharing-sbom-system/proving-service-deployment.yaml
+          sed -i "s|image: ghcr.io/.*/verifier-service:.*|image: ghcr.io/${REPO_PATH}/verifier-service:${IMAGE_TAG}|g" k8s/sharing-sbom-system/verifier-service-deployment.yaml
+          sed -i "s|image: ghcr.io/.*/ipfs-service:.*|image: ghcr.io/${REPO_PATH}/ipfs-service:${IMAGE_TAG}|g" k8s/sharing-sbom-system/ipfs-service-deployment.yaml
 
       - name: Commit and push changes
         run: |
@@ -95,9 +82,8 @@ jobs:
           git config --local user.name "GitHub Action"
           git add k8s/sharing-sbom-system/*.yaml
           
-          # Check if there are changes to commit
           if ! git diff --staged --quiet; then
-            git commit -m "Update microservice images to ${{ steps.tag.outputs.tag }}"
+            git commit -m "Update microservice images to ${GITHUB_SHA:0:7}"
             
             # Pull latest changes with rebase and push (retry up to 3 times)
             for i in {1..3}; do
