--- a/.github/workflows/deploy-microservices.yaml
+++ b/.github/workflows/deploy-microservices.yaml
@@ -14,13 +14,13 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-services:
+  build-risc-services:
     runs-on: ubuntu-latest
     permissions:
       packages: write
     strategy:
       matrix:
-        service: [proving-service, verifier-service, ipfs-service]
+        service: [proving-service, verifier-service]
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -44,19 +44,59 @@ jobs:
           echo "repo_path=$REPO_PATH" >> $GITHUB_OUTPUT
           echo "Building ${{ matrix.service }} with tag: $IMAGE_TAG"
 
-      - name: Build and push ${{ matrix.service }}
+      - name: Build and push ${{ matrix.service }} (multi-platform with ARM64 manual build)
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./${{ matrix.service }}/Dockerfile
           push: true
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           tags: ghcr.io/${{ steps.meta.outputs.repo_path }}/${{ matrix.service }}:${{ steps.meta.outputs.tag }}
           cache-from: type=gha,scope=${{ matrix.service }}
           cache-to: type=gha,mode=max,scope=${{ matrix.service }}
+          build-args: |
+            RISC0_VERSION=release-3.0
+
+  build-ipfs-service:
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set image metadata
+        id: meta
+        run: |
+          IMAGE_TAG="${GITHUB_SHA:0:7}"
+          REPO_PATH=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          echo "tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
+          echo "repo_path=$REPO_PATH" >> $GITHUB_OUTPUT
+          echo "Building ipfs-service with tag: $IMAGE_TAG"
+
+      - name: Build and push ipfs-service (multi-platform)
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./ipfs-service/Dockerfile
+          push: true
+          platforms: linux/amd64,linux/arm64
+          tags: ghcr.io/${{ steps.meta.outputs.repo_path }}/ipfs-service:${{ steps.meta.outputs.tag }}
+          cache-from: type=gha,scope=ipfs-service
+          cache-to: type=gha,mode=max,scope=ipfs-service
 
   update-manifests:
-    needs: build-services
+    needs: [build-risc-services, build-ipfs-service]
     runs-on: ubuntu-latest
     permissions:
       contents: write
