--- a/proving-service/Cargo.toml
+++ b/proving-service/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 actix-web = "4.4"
 actix-rt = "2.9"
 methods = { path = "./methods" }
+sbom-common = { path = "./common" }
 risc0-zkvm = { version = "^3.0.3" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -16,4 +17,4 @@ base64 = "0.21"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-
+once_cell = "1.19"
