--- a/proving-service/methods/guest/Cargo.toml
+++ b/proving-service/methods/guest/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 risc0-zkvm = { version = "^3.0.3", default-features = false, features = ['std'] }
+sbom-common = { path = "../../common", default-features = false, features = ['std'] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.10"
