--- a/proving-service/Cargo.toml
+++ b/proving-service/Cargo.toml
@@ -1,13 +1,22 @@
 [package]
 name = "proving-service"
-version = "0.1.0"
-edition = "2021"
+version = "0.3.0"
+edition = "2024"
+
+[lib]
+name = "proving_service"
+path = "src/lib.rs"
+
+[[bin]]
+name = "proving-service"
+path = "src/main.rs"
 
 [dependencies]
 actix-web = "4.4"
 actix-rt = "2.9"
 methods = { path = "./methods" }
-risc0-zkvm = { version = "^3.0.3" }
+sbom-common = { path = "./common" }
+risc0-zkvm = "3.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.10"
@@ -16,4 +25,4 @@ base64 = "0.21"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-
+once_cell = "1.19"
