--- a/proof-orchestrator-service/Dockerfile
+++ b/proof-orchestrator-service/Dockerfile
@@ -10,10 +10,10 @@ RUN apt-get update && apt-get install -y \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-COPY requirements.txt .
+COPY proof-orchestrator-service/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+COPY proof-orchestrator-service/ .
 
 EXPOSE 8080
 
