--- a/verifier-service/Dockerfile
+++ b/verifier-service/Dockerfile
@@ -14,7 +14,7 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /app
 
-COPY . .
+COPY verifier-service/ .
 
 # Install Risc0
 RUN curl -L https://risczero.com/install | bash && \
